--- a/src/styles.css
+++ b/src/styles.css
@@ -17,7 +17,7 @@ body {
 div#main {
   display: flex;
   flex-direction: column;
-  width: 100vw;
+  width: 100vw
 }
 
 section {
@@ -50,7 +50,8 @@ h1 {
   font-size: 7rem;
   font-weight: 400;
   line-height: 0.8;
-  margin: 0;
+  margin: 0
+  
 }
 
 h2 {
